--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name=".InsertMedicareActivity">
 
+        </activity>
+        <activity android:name=".OnSuccessActivity">
 
         </activity>
     </application>
