--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         >
         <activity
             android:name=".Homepage"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +25,10 @@
         <activity android:name=".InsertDetailsActivity">
         </activity>
 
-        <activity android:name=".ChooseOptionActivity">
-
+        <activity android:name=".ChooseOptionActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            >
         </activity>
         <activity android:name=".InsertMedicareActivity">
 
